--- a/views/bookmarklet.jade
+++ b/views/bookmarklet.jade
@@ -8,6 +8,7 @@ block content
       select(name='playlist_id')
         for playlist in playlists
           option(value='#{playlist.id}')= playlist.title
+      input(type='hidden', name='_csrf', value=csrf)
       button(type='submit') Add
   script(type='text/javascript')
     if (document.location.href.indexOf('?success') > -1) {
