--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,4 +1,4 @@
-!!! 5
+doctype html
 html
   head
     title moxboxx
@@ -16,7 +16,7 @@ html
     if analytics
       != '<script type="text/javascript">var _gaq = _gaq || []; _gaq.push(["_setAccount", "' + analytics + '"]); _gaq.push(["_trackPageview"]); (function() { var ga = document.createElement("script"); ga.type = "text/javascript"; ga.async = true; ga.src = "http://www.google-analytics.com/ga.js"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(ga, s); })();</script>'
 
-  body(style='background-image: url(#{background});', class='page-#{pageType}')
+  body(style='background-image: url(#{background});', class='page-#{pageType}', data-csrf='#{csrf}')
     #flash
     header
       if session.username
