--- a/views/new.jade
+++ b/views/new.jade
@@ -8,4 +8,5 @@ block content
       input(type='text', name='title')
       label(for='description', class='tip') Description
       input(type='text', name='description')
+      input(type='hidden', name='_csrf', value=csrf)
       button(type='submit') Create
